Detect stale install packages
